Made an animation for the dark mode, fixed the size of the icon

--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -34,8 +34,8 @@ a {
 }
 
 .img-darkMode {
-  width: 3%;
-  height: 2%;
+  height: 50px;
+  width: 50px;
   margin-top: 1rem;
   cursor: pointer;
 }
